fixed ubuntu styling bug and overflow scrolling issues

--- a/app/src/custom.css
+++ b/app/src/custom.css
@@ -2,7 +2,7 @@
     position: fixed;
     height: 100%;
     width: 100%;
-    z-index: 9999;
+    z-index: 99999;
     background-color: white;
 }
 
